Worked around Firefox bug on mac where mouse cursor sometimes stayed invisible after dismissing pop-up.  Instead of setting cursor to 'none', sets it to a transparent image.

--- a/src/chrome/skin/all/overlay.css
+++ b/src/chrome/skin/all/overlay.css
@@ -34,8 +34,21 @@ toolbar[mode="icons"] #thumbnailzoomplus-toolbar-button {
 #thumbnailzoomplus-panel {
   border: 1px solid #000 !important;
   padding: 5px;
-  cursor: none !important;
   z-index: 10100;
+  
+  /*
+     We want to set cursor: none, but due to a bug seen in Firefox 11 on Mac,
+     the cursor sometimes gets stuck invisible after popdown.  As a workaround,
+     instead of using none, we set cursor to a transparent image.
+     Problem seen on the 4th image (which sets a non-default cursor)
+     on the Reddit framing of this imgur page:
+     http://www.reddit.com/tb/rd0b1
+     http://imgur.com/a/21WOk
+     
+     Possibly related bug report:
+     https://bugzilla.mozilla.org/show_bug.cgi?id=721239
+   */
+  cursor: url(chrome://thumbnailzoomplus/skin/images/transparent_1x1.gif), auto;
 }
 #thumbnailzoomplus-panel[panelnoborder=true] {
   padding: 0px;
@@ -52,6 +65,7 @@ toolbar[mode="icons"] #thumbnailzoomplus-toolbar-button {
   background-position: top left !important;
   image-rendering: optimizeQuality;
 }
+
 #thumbnailzoomplus-panel-vbox {
   background-color: #AAA !important;
 }
